# ai-assistant

./: .env.example  .gitignore  LICENCE  README.md  pyproject.toml  pyrightconfig.json
app/: main.py
app/config/: config_auth.py  config_webhook.py
app/schemas/: nylas_email_schema.py  nylas_webhook_schema.py
app/services/: nylas_service.py
app/templates/: index.html
docs/: 1-project-setup.md
playground/: download_file.py
